--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -116,7 +116,8 @@ add_library(parser OBJECT
     ${PARSER_SOURCE}
 )
 if(SRCML_BUILD_USEPCH)
-    target_precompile_headers(parser PRIVATE <srcMLParser.hpp> <CommentTextLexer.hpp> <UTF8CharBuffer.hpp> <ModeStack.hpp> <Language.hpp>)
+    target_precompile_headers(parser PRIVATE <srcMLParser.hpp> <CommentTextLexer.hpp> $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:<UTF8CharBuffer.hpp>> <ModeStack.hpp> <Language.hpp>)
+
 endif()
 
 target_include_directories(parser PUBLIC . ${CMAKE_SOURCE_DIR}/src/libsrcml)
