--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Cache Build
-        id: cache
-        uses: actions/cache@v2
-        with:
-          path: build
-          key: ${{ runner.os }}-client1
+      # - name: Cache Build
+      #   id: cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: build
+      #     key: ${{ runner.os }}-client1
 
       - name: Setup Ubuntu
         shell: bash
@@ -55,7 +55,7 @@ jobs:
 
       - name: Create build directory
         shell: bash
-        if: ${{ !steps.cache.outputs.cache-hit }}
+        # if: ${{ !steps.cache.outputs.cache-hit }}
         run: mkdir build
 
       - name: Build on Windows
